--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -19,7 +19,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="test-svg.html">
 <link rel="import" href="my-icons.html">
 
 <dom-module id="my-app">
@@ -30,13 +29,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       :host {
         display: block;
-        --app-primary-color: #4285f4;
+        --app-primary-color: #3F525A;
         --app-secondary-color: black;
       }
 
       app-header {
         background-color: var(--app-primary-color);
-        color: #fff;
+        color: #F8F0C2;
       }
       app-header paper-icon-button {
         --paper-icon-button-ink-color: white;
@@ -44,6 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       .drawer-list {
         margin: 0 20px;
+        background-color : #3F525A;
       }
       .drawer-list a {
         display: block;
@@ -62,6 +62,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         app-toolbar {
             text-align: center;
         }
+        .pages
+        {
+            background-color : #548DA6;
+        }
 
 
     </style>
@@ -78,9 +82,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Drawer content -->
       <app-drawer>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="/view1">View One</a>
-          <a name="view2" href="/view2">View Two</a>
-          <a name="view3" href="/view3">View Three</a>
+          <a name="history" href="/history">Histoire</a>
+          <a name="diploma" href="/diploma">Diplômes</a>
+          <a name="experiences" href="/experiences">Expériences</a>
           <a name="my-new-view" href="/new-view">New view</a>    
         </iron-selector>
       </app-drawer>
@@ -88,17 +92,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Main content -->
       <app-header-layout has-scrolling-region>
 
-        <app-header condenses reveals effects="parallax-background">
+        <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div title>Bet on you</div>
+            <div title>Christophe Gerard </div>
           </app-toolbar>
         </app-header>
 
-        <iron-pages role="main" selected="[[page]]" attr-for-selected="name">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
+        <iron-pages class="pages" role="main" selected="[[page]]" attr-for-selected="name">
+          <my-history name="history"></my-history>
+          <my-diploma name="diploma"></my-diploma>
+          <my-experiences name="experiences"></my-experiences>
           <my-new-view name="new-view"></my-new-view>
         </iron-pages>
 
@@ -129,7 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       ],
 
       _routePageChanged: function(page) {
-        this.page = page || 'view1';
+        this.page = page || 'history';
       },
 
       _pageChanged: function(page) {
