--- a/front/src/my-svg.html
+++ b/front/src/my-svg.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<dom-module id="test-svg">
+<dom-module id="my-svg">
 
   <template>
     <object type="image/svg+xml" data ="[[src]]" width = "[[width]]" height="[[height]]" viewBox="[[viewBox]]"></object>
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     Polymer({
 
-      is: 'test-svg'
+      is: 'my-svg'
     });
 
   </script>
