--- a/front/src/my-experiences.html
+++ b/front/src/my-experiences.html
@@ -58,7 +58,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <div class="circle">1</div>
-      <h1>Stage à la mairie de Raon l'étape</h1>
+      <h1>Stage aux Services Techniques de Raon l'étape</h1>
+	  <div class="center"><my-svg src="../public/images/Experiences/raonletape.svg" width="75%" height="75%"></my-svg></div>
+	  <p> Ma toute première expérience professionelle, j'ai été affecté au service bâtiment, j'ai lors de ce travail fait de la peinture, du ménage et de la tapisserie !</p>
+	  <div class="center"><my-svg src="../public/images/Experiences/ville.svg" width="75%" height="75%"></my-svg></div>
     </div>
 
   </template>
