--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -70,7 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </style>
 
-    <app-location route="{{route}}"></app-location>
+    <app-location use-hash-as-path route="{{route}}"></app-location>
     <app-route
         route="{{route}}"
         pattern="/:page"
@@ -82,10 +82,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- Drawer content -->
       <app-drawer>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="history" href="/history">Histoire</a>
-          <a name="diploma" href="/diploma">Diplômes</a>
-          <a name="experiences" href="/experiences">Expériences</a>
-          <a name="my-new-view" href="/new-view">New view</a>    
+          <a name="history" href="#/history">Histoire</a>
+          <a name="diploma" href="#/diploma">Diplômes</a>
+          <a name="experiences" href="#/experiences">Expériences</a>
+          <a name="my-new-view" href="#/new-view">New view</a>    
         </iron-selector>
       </app-drawer>
 
