--- a/front/src/my-experiences.html
+++ b/front/src/my-experiences.html
@@ -60,34 +60,34 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="circle">1</div>
       <h1>Job d'été aux Services Techniques de Raon l'Étape</h1>
 	  <div class="center"><my-svg src="../public/images/Experiences/raonletape.svg" width="25%" height="25%"></my-svg></div>
-	  <p> Ma toute première expérience professionelle, j'ai été affecté au service bâtiment, j'ai lors de ce travail fait de la peinture, du ménage et de la tapisserie ! </p>
-	  <div class="center"><my-svg src="../public/images/Experiences/ville.svg" width="75%" height="75%"></my-svg></div>
+	  <p> Ma toute première expérience professionelle, j'ai été affecté au service bâtiment, j'ai lors de ce travail fait de la <b>peinture</b>, du <b>ménage</b> et de la <b>tapisserie !</b> </p>
+	  <div class="center"><my-svg src="../public/images/Experiences/ville.svg" width="75%" height="25%"></my-svg></div>
     </div>
 	<div class="card">
       <div class="circle">2</div>
       <h1>Stage aux Papeteries de Clairefontaine</h1>
 	  <div class="center"><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
-	  <p> Stage effectué lors de mon D.U.T Informatique, j'ai dans le cadre de mon diplôme développé une application intranet. Cette application permet de <b>suivre la production</b> de l'atelier finition. C'est une application <b>Web</b> que j'ai développé en <b>PHP.</b></p>
-	  <div class="center"><my-svg src="../public/images/Experiences/papet.svg" width="75%" height="75%"></my-svg></div>
+	  <p> Stage effectué lors de mon D.U.T Informatique, j'ai dans le cadre de mon diplôme développé une application intranet. Cette application permet de <b>suivre la production</b> d'un atelier. C'est une application <b>Web</b> que j'ai développé en <b>PHP.</b></p>
     </div>
 	<div class="card">
       <div class="circle">3</div>
       <h1>Job d'été aux Papeteries de Clairefontaine</h1>
 	  <div class="center"><my-svg src="../public/images/Experiences/clairefontaine.svg" width="25%" height="25%"></my-svg></div>
-	  <p> Mon <b>stage s'étant très bien passé</b> dans l'entreprise, j'ai été repris pour l'été mais cette fois-ci en tant que <b>technicien informatique</b>. J'ai pu approfondir mes connaissances en réseaux (<b>routage ip V4</b>, <b>mise en place de caméra I.P</b>, <b>gestion de l'AD</b>). J'ai aussi dépoussieré tous les ordinateurs de l'usine (environ <b>550</b>). </p>
-    </div>
+	  <p> Mon <b>stage s'étant très bien passé</b> dans l'entreprise, j'ai été repris pour l'été mais cette fois-ci en tant que <b>technicien informatique</b>. J'ai pu approfondir mes connaissances en réseaux (routage ip V4, mise en place de caméra I.P ,gestion de l'AD). J'ai aussi dépoussieré tous les ordinateurs de l'usine (environ <b>550</b>). </p>
+	  <div class="center"><my-svg src="../public/images/Experiences/papet.svg" width="75%" height="25%"></my-svg></div>
+	</div>
 	<div class="card">
       <div class="circle">4</div>
       <h1>Job d'été au CHRU de Brabois </h1>
 	  <div class="center"><my-svg src="../public/images/Experiences/chuimg.svg" width="25%" height="25%"></my-svg></div>
 	  <p> Pour ce travail, j'ai été affecté aux Services Intérieurs. J'ai notamment fait la ramasse des poubelles et du linge de l'hôpital. Ce travail se faisait en équipe de deux. Cela a été une expérience très enrichissante : <b>Organisation</b>, <b>Rigueur</b> et <b>Travail d'équipe</b> sont les mots qui définissent le mieux ce job ! C'était aussi très physique, ramasser tout le linge et les poubelles sur 12 étages plusieurs fois par jour était éprouvant.</p>
-	  <div class="center"><my-svg src="../public/images/Experiences/CHU.svg" width="75%" height="75%"></my-svg></div>
+	  <div class="center"><my-svg src="../public/images/Experiences/CHU.svg" width="75%" height="25%"></my-svg></div>
 	</div>
 	<div class="card">
       <div class="circle">5</div>
       <h1>Crédit Agricole Technologies & Services</h1>
 	  <div class="center"><my-svg src="../public/images/Experiences/cats.svg" width="25%" height="25%"></my-svg></div>
-	  <p>Travail pour mon diplôme de <b>R</b>esponsable en <b>I</b>ngénièrie des <b>L</b>ogiciels (RIL). Orienté gestion de projet, j'ai été amené à <b>conduire un projet technique</b> au sein de l'entreprise (d'abord un tout petit projet), puis un deuxième un peu plus gros (avec 2 personnes à gérer). Cependant à cause de la <b>confidentialité</b>, je n'ai pas le droit de divulger d'informations. J'ai effectué un premier contrat de <b>Septembre 2014</b> jusqu'a <b>Juin 2016</b>. Je suis à ce jour toujours dans l'entreprise dans le cadre de la formation <b>Manager</b> de <b>S</b>ystèmes d'<b>I</b>nformations (MSI) et ce jusqu'au <b>17/11/2017.</b></p>
+	  <p>Travail pour mon diplôme de <b>R</b>esponsable en <b>I</b>ngénièrie des <b>L</b>ogiciels (RIL). Orienté gestion de projet, j'ai été amené à <b>conduire un projet technique</b> au sein de l'entreprise (d'abord un tout petit projet), puis un deuxième un peu plus gros (avec 2 personnes à gérer). Cependant à cause de la <b>confidentialité</b>, je n'ai pas le droit de divulger d'informations. J'ai effectué un premier contrat de <b>Septembre 2014</b> jusqu'a <b>Juin 2016</b>. Je suis à ce jour toujours dans l'entreprise dans le cadre de la formation <b>M</b>anager de <b>S</b>ystèmes d'<b>I</b>nformations (MSI) et ce jusqu'au <b>17/11/2017.</b></p>
 	</div>
 
   </template>
