--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="history" href="#/history">Histoire</a>
           <a name="diploma" href="#/diploma">Diplômes</a>
           <a name="experiences" href="#/experiences">Expériences</a>
-          <a name="my-new-view" href="#/new-view">New view</a>    
+          <a name="skills" href="#/skills">Compétences</a>    
         </iron-selector>
       </app-drawer>
 
@@ -103,7 +103,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-history name="history" route="{{route}}"></my-history>
           <my-diploma name="diploma" route="{{route}}"></my-diploma>
           <my-experiences name="experiences" route="{{route}}"></my-experiences>
-          <my-new-view name="new-view" route="{{route}}"></my-new-view>
+          <my-skills name="skills" route="{{route}}"></my-skills>
         </iron-pages>
 
       </app-header-layout>
