--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+ï»¿<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/platform.js/platform.js">
 <link rel="import" href="../bower_components/webcomponentsjs/webcomponents-lite.min.js">
 
@@ -40,7 +40,7 @@
 				text-decoration : none;
 				color : #68B8DB
 			}
-			.svg
+			.center
 			{
 				text-align : center;
 			}
@@ -50,23 +50,23 @@
 		  <h1>Langages de programmation !</h1>
 			<div class="center"><h2>Le JAVA</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/java.svg" width="25%" height="25%"></my-svg></div>
-			<p> Le java est le langage que j'ai le plus utilisé, c'est le langage que j'ai le plus appronfondie car c'était le support de mon D.U.T Informatique. Pendant les 2 années de formation, le langage JAVA était au coeur de quasimment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sérialiser/désérialiser</b> des objets.</p>
+			<p> Le java est le langage que j'ai le plus utilisÃ©, c'est le langage que j'ai le plus appronfondie car c'Ã©tait le support de mon D.U.T Informatique. Pendant les 2 annÃ©es de formation, le langage JAVA Ã©tait au coeur de quasimment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sÃ©rialiser/dÃ©sÃ©rialiser</b> des objets.</p>
 			<div class="center"><h2>Le C</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/c.svg" width="25%" height="25%"></my-svg></div>
-			<p> Ce langage est le premier que j'ai appris, via le tutoriel du <b>Site du Zéro</b> (qui s'appelle aujoud'hui OpenClassRoom). J'ai appréhendé les pointeurs et j'ai mis beaucoup beaucoup beaucoup de temps à comprendre comment ils fonctionnent. J'ai notamment utilisé la librairies <b>Slick2D</b> pour créer un <b>Bomberman</b> (qui n'a pas abouti). Cela fais très longtemps que je n'ai pas pratiqué ce langage.</p>
+			<p> Ce langage est le premier que j'ai appris, via le tutoriel du <b>Site du ZÃ©ro</b> (qui s'appelle aujoud'hui OpenClassRoom). J'ai apprÃ©hendÃ© les pointeurs et j'ai mis beaucoup beaucoup beaucoup de temps Ã  comprendre comment ils fonctionnent. J'ai notamment utilisÃ© la librairies <b>Slick2D</b> pour crÃ©er un <b>Bomberman</b> (qui n'a pas abouti). Cela fais trÃ¨s longtemps que je n'ai pas pratiquÃ© ce langage.</p>
 			<div class="center"><h2>Le C#</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/cdiez.svg" width="25%" height="25%"></my-svg></div>
-			<p> Le C# est un langage que j'ai pu apprendre lors de ma <b>formation</b> en Responsable en Ingèniere des Logiciels. J'ai pour l'occasion créée un <b>Tetris</b> fonctionnel.</p>
+			<p> Le C# est un langage que j'ai pu apprendre lors de ma <b>formation</b> en Responsable en IngÃ¨niere des Logiciels. J'ai pour l'occasion crÃ©Ã©e un <b>Tetris</b> fonctionnel.</p>
 			<div class="center"><h2>Le Cobol</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/cobol.svg" width="25%" height="25%"></my-svg></div>
-			<p> Dernière promotion à recevoir ce cours lors de mon D.U.T Informatique. Ce langage de programmation est très <b>utilisé</b> dans le milieu <b>bancaire</b>. Je n'ai plus énormement de souvenir de ce langage de programmation malheureusement (Je me souviens de quelques trucs comme la procedure division et la screen division je crois). Je ne le <b>pratique plus</b> aujourd'hui mais si nécéssaire je m'y remettrai.</p>
+			<p> DerniÃ¨re promotion Ã  recevoir ce cours lors de mon D.U.T Informatique. Ce langage de programmation est trÃ¨s <b>utilisÃ©</b> dans le milieu <b>bancaire</b>. Je n'ai plus Ã©normement de souvenir de ce langage de programmation malheureusement (Je me souviens de quelques trucs comme la procedure division et la screen division je crois). Je ne le <b>pratique plus</b> aujourd'hui mais si nÃ©cÃ©ssaire je m'y remettrai.</p>
 			<div class="center"><h2>Le JavaScript</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/js.svg" width="25%" height="25%"></my-svg></div>
-			<p> Celui-ci, je l'ai appris par moi-même, sa syntaxe et ses particuliratés sont nombreuses, mais c'est un langage <b>très puissant</b> pour le web. Je le pratique aujourd'hui <b>régulièrement</b> aussi bien professionellement que pour mes projets personnels.</p>
+			<p> Celui-ci, je l'ai appris par moi-mÃªme, sa syntaxe et ses particuliratÃ©s sont nombreuses, mais c'est un langage <b>trÃ¨s puissant</b> pour le web. Je le pratique aujourd'hui <b>rÃ©guliÃ¨rement</b> aussi bien professionellement que pour mes projets personnels.</p>
 			<div class="center"><h2>Les langages du Web</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/web.svg" width="25%" height="25%"></my-svg></div>
-			<p> HTML,CSS,PHP,JQuery sont devenus au fur et à mesure les standars du Web (Même si aujourd'hui on commence de plus en plus à aller vers du JS plutôt que PHP). J'ai été amené à m'en servir <b>régulièrement</b> puisque j'ai développé une application web lors de mon stage à la Papeteries de Clairefontaine. Je pratique tous ces langages <b>régulièrement</b> (mise à part PHP). </p>
-			<p> Il est temps de vous faire un graphique qui résument mes compétences sur les langages de programmation cité ci-dessus : </p>
+			<p> HTML,CSS,PHP,JQuery sont devenus au fur et Ã  mesure les standars du Web (MÃªme si aujourd'hui on commence de plus en plus Ã  aller vers du JS plutÃ´t que PHP). J'ai Ã©tÃ© amenÃ© Ã  m'en servir <b>rÃ©guliÃ¨rement</b> puisque j'ai dÃ©veloppÃ© une application web lors de mon stage Ã  la Papeteries de Clairefontaine. Je pratique tous ces langages <b>rÃ©guliÃ¨rement</b> (mise Ã  part PHP). </p>
+			<p> Il est temps de vous faire un graphique qui rÃ©sument mes compÃ¨tences sur les langages de programmation citÃ©s ci-dessus : </p>
 			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES EN PROG.</p></div>
 		</div>
 		<div class="card">
