--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -71,10 +71,60 @@
 		</div>
 		<div class="card">
 			<div class="circle">2</div>
-			<h1> IDE/Editeurs de textes</h1>
+			<h1> IDE/Editeurs de textes !</h1>
 			<div class="center"><h2> Eclipse </h2></div>
-			<div class="center"><my-svg src="../public/images/Skills/Editeurs/eclipse.svg"></my-svg></div>
-			<p></p>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/eclipse.svg" width="25%" height="25%"></my-svg></div>
+			<p>Comme le JAVA est le langage que j'ai le plus pratiqué, c'est forcément sur cet IDE que je me sens le plus à l'aise, aussi bien pour programmer que pour debug. C'est un environnement que je connais très bien et j'y suis habitué.</p>
+			<div class="center"><h2> Android Studio </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/androidstudio.svg" width="25%" height="25%"></my-svg></div>
+			<p>Mix entre Java et Xml, c'est le meilleur IDE pour réaliser des applications mobiles pour Android, il est simple d'utilisation et j'en ai l'habitude, j'ai passé plus de 140 heures sur cet outils donc je le connais plutôt bien. Le seul point négatif est quand il compile le gradle pour la première fois, la plupart du temps c'est long !!!</p>
+			<div class="center"><h2> CodeBlocks </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/codeblocks.svg" width="25%" height="25%"></my-svg></div>
+			<p> C'est l'IDE que recommandais le tutoriel sur le C, j'ai donc suivi à la lettre les instructions et c'est vrai que c'est plutôt bien fait pour du C. J'ai passé aussi pas mal de temps sur cet IDE mais comme je ne pratique plus le C je ne sais pas trop ou me positionner sur cet IDE.</p>
+			<div class="center"><h2> Brackets </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/brackets.svg" width="25%" height="25%"></my-svg></div>
+			<p>Je l'ai découvert en parcourant le web à la recherche d'un IDE spécialisé JavaScript et.... Quel bonheur ! Il est super bien fait et en plus écrit en JS. Je ne maîtrise pas encore l'outils mais il est puissant ! C'est ma découverte de cette année je pense (niveau éditeur).</p>
+			<div class="center"><h2> NotePad++ </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/notepad.svg" width="25%" height="25%"></my-svg></div>
+			<p>Je vais pas détailler cet outils, c'est la BASE !!! Je m'en sert toujours aujourd'hui et ce, de façon régulière.</p>
+			<div class="center"><h2> SublimeText </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/sublimetext.svg" width="25%" height="25%"></my-svg></div>
+			<p>C'est un éditeur que je n'aime pas trop, je m'en suis servi parce qu'il donnait une vue globale sur les dossiers avec ce qu'il y a dedans. Mais maintenant que Brackets existe je ne pense plus m'en servir.</p>
+			<div class="center"><h2> PhotoFiltre </h2></div>
+			<div class="center"><my-svg src="../public/images/Skills/Editeurs/photofiltre.svg" width="25%" height="25%"></my-svg></div>
+			<p>Alors, pour ce qui est de PhotoFiltre, je m'en sers en général pour redimensionner une image ou pour ajouter de la transparence. Je ne sais pas trop l'utiliser autrement que de cette façon.</p>
+			<p>Comme pour la partie Langage de programmation, voici un graphique qui récapitule tout : </p>
+			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES SUR IDE/EDITEURS</p></div>
+		</div>
+		<div class="card">
+			<div class="circle">3</div>
+			<h1>Bibliothèques !</h1>
+				<div class="center"><h2>AngularJS</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/angular.svg" width="25%" height="25%"></my-svg></div>
+				<p>J'ai uniquement testé pour voir ce que c'était. Je trouve ça trop compliqué pour ce que ça fournit. Et je n'aime pas du tout la syntaxe.</p>
+				<div class="center"><h2>Bootstrap</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/bootstrap.svg" width="25%" height="25%"></my-svg></div>
+				<p>Très pratique pour rendre facilement un site responsive. C'est simple d'utilisation et assez bien fait. Je m'en suis servi que très peu mais ça reste quelque chose d'utile à connaître.</p>
+				<div class="center"><h2>JQuery</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/jquery.svg" width="25%" height="25%"></my-svg></div>
+				<p>Write Less, Do More !! C'est une super bibliothèques, elle est bien faite et en plus c'est plutôt intuitif. Je m'en sers toujours beaucoup aujourd'hui !</p>
+				<div class="center"><h2>Symfony2</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/symfony.svg" width="25%" height="25%"></my-svg></div>
+				<p>J'ai été amené à m'en servir pour mes études. C'est très puissant pour faire du MVC mais par contre c'est assez long à apprendre les mécanismes ! Je connais plutôt pas mal !</p>
+				<div class="center"><h2>NodeJS</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/nodejs.svg" width="25%" height="25%"></my-svg></div>
+				<p>Faire du JavaScript côté serveur, c'est fantastique ! Les applications répondent tellement vite grâce à ça ! J'ai suivi le cours sur OpenClassRoom et j'ai la certif, je l'utilise toujours régulièrement à ce jour.</p>
+				<div class="center"><h2>Npm</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/npm.svg" width="25%" height="25%"></my-svg></div>
+				<p>C'est ce qui permet d'installer des "packages" pour nodejs en particulier. C'est plus un système de gestion de version qu'une bibliothèques mais c'est super simple et efficace.</p>
+				<div class="center"><h2>Bower</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/bower.svg" width="25%" height="25%"></my-svg></div>
+				<p>C'est pareil que npm mais pour du front-end.</p>
+				<div class="center"><h2>Polymer</h2></div>
+				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/polymer.svg" width="25%" height="25%"></my-svg></div>
+				<p> C'était ce que j'attendais depuis un bon moment ! Créer ses propres tags html et les partager avec la communauté, c'est quelquechose d'extraordinaire. Je pense que ça va prendre de plus en plus d'ampleur. Je m'en sers très régulièrement (Tous les jours à vrai dire).</p>
+				<p> Enfin, voici le graphe récapitulitatif pour les bibliothèques : </p>
+				<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES SUR BIBLI</p></div>
 		</div>
     </template>
     <script>
