Correction fautes orthographes + ajout section projet
Signed-off-by: GERARD Christophe <ET02024@zgie.ztech>

--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -85,7 +85,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <a name="history" href="#/history">Histoire</a>
           <a name="diploma" href="#/diploma">Diplômes</a>
           <a name="experiences" href="#/experiences">Expériences</a>
-          <a name="skills" href="#/skills">Compétences</a>    
+          <a name="skills" href="#/skills">Compétences</a>
+		  <a name="projects" href="#/projects">Projets</a>	
         </iron-selector>
       </app-drawer>
 
@@ -104,6 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-diploma name="diploma" route="{{route}}"></my-diploma>
           <my-experiences name="experiences" route="{{route}}"></my-experiences>
           <my-skills name="skills" route="{{route}}"></my-skills>
+		  <my-projects name="projects" route="{{route}}"></my-projects>
         </iron-pages>
 
       </app-header-layout>
