--- a/front/src/my-skills.html
+++ b/front/src/my-skills.html
@@ -50,22 +50,30 @@
 		  <h1>Langages de programmation !</h1>
 			<div class="center"><h2>Le JAVA</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/java.svg" width="25%" height="25%"></my-svg></div>
-			<p> Le java est le langage que j'ai le plus utilisé, c'est le langage que j'ai le plus appronfondie car c'était le support de mon D.U.T Informatique. Pendant les 2 années de formation, le langage JAVA était au coeur de quasimment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sérialiser/désérialiser</b> des objets.</p>
+			<p> Le java est le langage que j'ai le plus utilisé, c'est le langage que j'ai le plus appronfondie car c'était le support de mon D.U.T Informatique. Pendant les 2 années de formation, 
+			le langage JAVA était au coeur de quasimment tous les modules de programmation. J'ai notamment appris le <b>Polymorphisme</b> ou encore le fait de <b>sérialiser/désérialiser</b> des objets.</p>
 			<div class="center"><h2>Le C</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/c.svg" width="25%" height="25%"></my-svg></div>
-			<p> Ce langage est le premier que j'ai appris, via le tutoriel du <b>Site du Zéro</b> (qui s'appelle aujoud'hui OpenClassRoom). J'ai appréhendé les pointeurs et j'ai mis beaucoup beaucoup beaucoup de temps à comprendre comment ils fonctionnent. J'ai notamment utilisé la librairies <b>Slick2D</b> pour créer un <b>Bomberman</b> (qui n'a pas abouti). Cela fais très longtemps que je n'ai pas pratiqué ce langage.</p>
+			<p> Ce langage est le premier que j'ai appris, via le tutoriel du <b>Site du Zéro</b> (qui s'appelle aujoud'hui OpenClassRoom). 
+			J'ai appréhendé les pointeurs et j'ai mis beaucoup beaucoup beaucoup de temps à comprendre comment ils fonctionnent. 
+			J'ai notamment utilisé la librairies <b>Slick2D</b> pour créer un <b>Bomberman</b> (qui n'a pas abouti). 
+			Cela fais très longtemps que je n'ai pas pratiqué ce langage.</p>
 			<div class="center"><h2>Le C#</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/cdiez.svg" width="25%" height="25%"></my-svg></div>
 			<p> Le C# est un langage que j'ai pu apprendre lors de ma <b>formation</b> en Responsable en Ingèniere des Logiciels. J'ai pour l'occasion créée un <b>Tetris</b> fonctionnel.</p>
 			<div class="center"><h2>Le Cobol</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/cobol.svg" width="25%" height="25%"></my-svg></div>
-			<p> Dernière promotion à recevoir ce cours lors de mon D.U.T Informatique. Ce langage de programmation est très <b>utilisé</b> dans le milieu <b>bancaire</b>. Je n'ai plus énormement de souvenir de ce langage de programmation malheureusement (Je me souviens de quelques trucs comme la procedure division et la screen division je crois). Je ne le <b>pratique plus</b> aujourd'hui mais si nécéssaire je m'y remettrai.</p>
+			<p> Dernière promotion à recevoir ce cours lors de mon D.U.T Informatique. Ce langage de programmation est très <b>utilisé</b> dans le milieu <b>bancaire</b>. 
+			Je n'ai plus énormement de souvenir de ce langage de programmation malheureusement (Je me souviens de quelques trucs comme la procedure division et la screen division je crois). 
+			Je ne le <b>pratique plus</b> aujourd'hui mais si nécéssaire je m'y remettrai.</p>
 			<div class="center"><h2>Le JavaScript</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/js.svg" width="25%" height="25%"></my-svg></div>
-			<p> Celui-ci, je l'ai appris par moi-même, sa syntaxe et ses particuliratés sont nombreuses, mais c'est un langage <b>très puissant</b> pour le web. Je le pratique aujourd'hui <b>régulièrement</b> aussi bien professionellement que pour mes projets personnels.</p>
+			<p> Celui-ci, je l'ai appris par moi-même, sa syntaxe et ses particuliratés sont nombreuses, mais c'est un langage <b>très puissant</b> pour le web. 
+			Je le pratique aujourd'hui <b>régulièrement</b> aussi bien professionellement que pour mes projets personnels.</p>
 			<div class="center"><h2>Les langages du Web</h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/LangagesProg/web.svg" width="25%" height="25%"></my-svg></div>
-			<p> HTML,CSS,PHP,JQuery sont devenus au fur et à mesure les standars du Web (Même si aujourd'hui on commence de plus en plus à aller vers du JS plutôt que PHP). J'ai été amené à m'en servir <b>régulièrement</b> puisque j'ai développé une application web lors de mon stage à la Papeteries de Clairefontaine. Je pratique tous ces langages <b>régulièrement</b> (mise à part PHP). </p>
+			<p> HTML,CSS,PHP,JQuery sont devenus au fur et à mesure les standars du Web (Même si aujourd'hui on commence de plus en plus à aller vers du JS plutôt que PHP). 
+			J'ai été amené à m'en servir <b>régulièrement</b> puisque j'ai développé une application web lors de mon stage à la Papeteries de Clairefontaine. Je pratique tous ces langages <b>régulièrement</b> (mise à part PHP). </p>
 			<p> Il est temps de vous faire un graphique qui résument mes compètences sur les langages de programmation cités ci-dessus : </p>
 			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES EN PROG.</p></div>
 		</div>
@@ -74,25 +82,29 @@
 			<h1> IDE/Editeurs de textes !</h1>
 			<div class="center"><h2> Eclipse </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/eclipse.svg" width="25%" height="25%"></my-svg></div>
-			<p>Comme le JAVA est le langage que j'ai le plus pratiqué, c'est forcément sur cet IDE que je me sens le plus à l'aise, aussi bien pour programmer que pour debug. C'est un environnement que je connais très bien et j'y suis habitué.</p>
+			<p>Comme le <b>Java</b> est le langage que j'ai le plus pratiqué, c'est forcément sur cet IDE que je me sens le plus à l'aise, aussi bien pour <b>programmer</b> que pour <b>debug</b>. C'est un environnement que je connais très bien et j'y suis habitué.</p>
 			<div class="center"><h2> Android Studio </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/androidstudio.svg" width="25%" height="25%"></my-svg></div>
-			<p>Mix entre Java et Xml, c'est le meilleur IDE pour réaliser des applications mobiles pour Android, il est simple d'utilisation et j'en ai l'habitude, j'ai passé plus de 140 heures sur cet outils donc je le connais plutôt bien. Le seul point négatif est quand il compile le gradle pour la première fois, la plupart du temps c'est long !!!</p>
+			<p> C'est le <b>meilleur</b> IDE pour réaliser des <b>applications mobiles</b> pour Android, il est simple d'utilisation et j'en ai l'habitude, je connais très bien cet IDE parce que j'ai dû m'en servir dans un projet pour ma formation RIL. 
+			Le seul point <b>négatif</b> est quand il <b>compile le gradle</b> pour la première fois, la plupart du temps c'est long !!!</p>
 			<div class="center"><h2> CodeBlocks </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/codeblocks.svg" width="25%" height="25%"></my-svg></div>
-			<p> C'est l'IDE que recommandais le tutoriel sur le C, j'ai donc suivi à la lettre les instructions et c'est vrai que c'est plutôt bien fait pour du C. J'ai passé aussi pas mal de temps sur cet IDE mais comme je ne pratique plus le C je ne sais pas trop ou me positionner sur cet IDE.</p>
+			<p> C'est l'IDE que recommandais le tutoriel sur le C, j'ai donc suivi à la lettre les instructions et c'est vrai que c'est plutôt bien fait pour du C. 
+			J'ai passé aussi pas mal de temps sur cet IDE mais comme je ne <b>pratique plus le C</b> je ne sais pas trop ou me positionner sur cet IDE.</p>
 			<div class="center"><h2> Brackets </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/brackets.svg" width="25%" height="25%"></my-svg></div>
-			<p>Je l'ai découvert en parcourant le web à la recherche d'un IDE spécialisé JavaScript et.... Quel bonheur ! Il est super bien fait et en plus écrit en JS. Je ne maîtrise pas encore l'outils mais il est puissant ! C'est ma découverte de cette année je pense (niveau éditeur).</p>
+			<p>Je l'ai découvert en parcourant le web à la recherche d'un IDE <b>spécialisé JavaScript</b> et.... Quel bonheur ! 
+			Il est super bien fait et en plus écrit en JS. Je ne maîtrise pas encore l'outils mais il est <b>puissant</b> ! 
+			C'est ma découverte de cette année je pense (niveau éditeur).</p>
 			<div class="center"><h2> NotePad++ </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/notepad.svg" width="25%" height="25%"></my-svg></div>
-			<p>Je vais pas détailler cet outils, c'est la BASE !!! Je m'en sert toujours aujourd'hui et ce, de façon régulière.</p>
+			<p>Je vais pas détailler cet outil, c'est la BASE !!! Je m'en sert <b>toujours aujourd'hui</b> et ce, de façon régulière.</p>
 			<div class="center"><h2> SublimeText </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/sublimetext.svg" width="25%" height="25%"></my-svg></div>
-			<p>C'est un éditeur que je n'aime pas trop, je m'en suis servi parce qu'il donnait une vue globale sur les dossiers avec ce qu'il y a dedans. Mais maintenant que Brackets existe je ne pense plus m'en servir.</p>
+			<p>C'est un éditeur que <b>je n'aime pas trop</b>, je m'en suis servi parce qu'il donnait une vue globale sur les dossiers avec ce qu'il y a dedans. Mais maintenant que Brackets existe je ne pense plus m'en servir.</p>
 			<div class="center"><h2> PhotoFiltre </h2></div>
 			<div class="center"><my-svg src="../public/images/Skills/Editeurs/photofiltre.svg" width="25%" height="25%"></my-svg></div>
-			<p>Alors, pour ce qui est de PhotoFiltre, je m'en sers en général pour redimensionner une image ou pour ajouter de la transparence. Je ne sais pas trop l'utiliser autrement que de cette façon.</p>
+			<p>Alors, pour ce qui est de PhotoFiltre, je m'en sers en général pour <b>redimensionner</b> une image ou pour <b>ajouter de la transparence</b>. Je ne sais pas trop l'utiliser autrement que de cette façon.</p>
 			<p>Comme pour la partie Langage de programmation, voici un graphique qui récapitule tout : </p>
 			<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES SUR IDE/EDITEURS</p></div>
 		</div>
@@ -101,28 +113,28 @@
 			<h1>Bibliothèques !</h1>
 				<div class="center"><h2>AngularJS</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/angular.svg" width="25%" height="25%"></my-svg></div>
-				<p>J'ai uniquement testé pour voir ce que c'était. Je trouve ça trop compliqué pour ce que ça fournit. Et je n'aime pas du tout la syntaxe.</p>
+				<p>J'ai uniquement <b>testé</b> pour voir ce que c'était. Je trouve ça <b>trop compliqué</b> pour ce que ça fournit. Et je n'aime pas du tout la <b>syntaxe</b>.</p>
 				<div class="center"><h2>Bootstrap</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/bootstrap.svg" width="25%" height="25%"></my-svg></div>
-				<p>Très pratique pour rendre facilement un site responsive. C'est simple d'utilisation et assez bien fait. Je m'en suis servi que très peu mais ça reste quelque chose d'utile à connaître.</p>
+				<p>Très pratique pour rendre facilement un site <b>responsive</b>. C'est simple d'utilisation et assez bien fait. Je m'en suis servi que très peu mais ça reste quelque chose <b>d'utile</b> à connaître.</p>
 				<div class="center"><h2>JQuery</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/jquery.svg" width="25%" height="25%"></my-svg></div>
-				<p>Write Less, Do More !! C'est une super bibliothèques, elle est bien faite et en plus c'est plutôt intuitif. Je m'en sers toujours beaucoup aujourd'hui !</p>
+				<p><b>Write Less, Do More !!</b> C'est une super bibliothèque, elle est bien faite et en plus c'est plutôt intuitif. Je m'en sers toujours beaucoup aujourd'hui !</p>
 				<div class="center"><h2>Symfony2</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/symfony.svg" width="25%" height="25%"></my-svg></div>
-				<p>J'ai été amené à m'en servir pour mes études. C'est très puissant pour faire du MVC mais par contre c'est assez long à apprendre les mécanismes ! Je connais plutôt pas mal !</p>
+				<p>J'ai été amené à m'en servir pour mes études. C'est très puissant pour faire du <b>MVC</b> mais par contre c'est assez long à apprendre les mécanismes ! Je connais plutôt pas mal !</p>
 				<div class="center"><h2>NodeJS</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/nodejs.svg" width="25%" height="25%"></my-svg></div>
-				<p>Faire du JavaScript côté serveur, c'est fantastique ! Les applications répondent tellement vite grâce à ça ! J'ai suivi le cours sur OpenClassRoom et j'ai la certif, je l'utilise toujours régulièrement à ce jour.</p>
+				<p>Faire du JavaScript côté serveur, c'est <b>fantastique</b> ! Les applications répondent tellement <b>vite</b> grâce à ça ! J'ai suivi le cours sur OpenClassRoom et j'ai la certif, je l'utilise toujours régulièrement à ce jour.</p>
 				<div class="center"><h2>Npm</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/npm.svg" width="25%" height="25%"></my-svg></div>
-				<p>C'est ce qui permet d'installer des "packages" pour nodejs en particulier. C'est plus un système de gestion de version qu'une bibliothèques mais c'est super simple et efficace.</p>
+				<p>C'est ce qui permet d'installer des <b>"packages"</b> pour nodejs en particulier. C'est plus un système de gestion de version qu'une bibliothèque mais c'est super simple et efficace.</p>
 				<div class="center"><h2>Bower</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/bower.svg" width="25%" height="25%"></my-svg></div>
-				<p>C'est pareil que npm mais pour du front-end.</p>
+				<p>C'est pareil que npm mais pour du <b>front-end</b>.</p>
 				<div class="center"><h2>Polymer</h2></div>
 				<div class="center"><my-svg src="../public/images/Skills/Bibliotheques/polymer.svg" width="25%" height="25%"></my-svg></div>
-				<p> C'était ce que j'attendais depuis un bon moment ! Créer ses propres tags html et les partager avec la communauté, c'est quelquechose d'extraordinaire. Je pense que ça va prendre de plus en plus d'ampleur. Je m'en sers très régulièrement (Tous les jours à vrai dire).</p>
+				<p> C'était ce que j'attendais depuis un bon moment ! Créer ses propres <b>tags html</b> et les partager avec la communauté, c'est quelquechose d'<b>extraordinaire</b>. Je pense que ça va prendre de plus en plus d'ampleur. Je m'en sers très régulièrement (Tous les jours à vrai dire).</p>
 				<p> Enfin, voici le graphe récapitulitatif pour les bibliothèques : </p>
 				<div class="center"><p> TODO : RAJOUTER UN GRAPHIQUE QUI RESUME LES COMPETENCES SUR BIBLI</p></div>
 		</div>
