--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -66,6 +66,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         {
             background-color : #548DA6;
         }
+		footer {
+      height: 50px;
+      line-height: 50px;
+      text-align: center;
+      background-color: white;
+      font-size: 14px;
+    }
 
 
     </style>
@@ -107,11 +114,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-skills name="skills" route="{{route}}"></my-skills>
 		  <my-projects name="projects" route="{{route}}"></my-projects>
         </iron-pages>
-
+		<footer> &copy; Christophe GERARD</footer>
       </app-header-layout>
 
     </app-drawer-layout>
-
+	
   </template>
 
   <script>
