--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -70,7 +70,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       height: 50px;
       line-height: 50px;
       text-align: center;
-      background-color: white;
+      background-color: #3F525A;
+	  color : #F8F0C2;
       font-size: 14px;
     }
 
