--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -19,6 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
 <link rel="import" href="my-icons.html">
 
 <dom-module id="my-app">
@@ -104,7 +105,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div title>Christophe Gerard </div>
+            <div title>Christophe Gerard   
+				<a href="https://facebook.com/christophe.gerard.96" target="_blank" rel="noopener noreferred"><social-media-icons color="#548DA6" icon="facebook" size="10%"></social-media-icons></a>
+				<a href="https://github.com/Heliex/" target="_blank" rel="noopener noreferrer"><social-media-icons color="darkgreys" icon="github" title="Heliex Github Profile" size="10%"></social-media-icons></a>
+			</div>
           </app-toolbar>
         </app-header>
 
