--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -106,8 +106,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div title>Christophe Gerard   
-				<a href="https://facebook.com/christophe.gerard.96" target="_blank" rel="noopener noreferred"><social-media-icons color="#548DA6" icon="facebook" size="10"></social-media-icons></a>
-				<a href="https://github.com/Heliex/" target="_blank" rel="noopener noreferrer"><social-media-icons color="darkgreys" icon="github" title="Heliex Github Profile" size="10"></social-media-icons></a>
+				<a href="https://facebook.com/christophe.gerard.96" target="_blank" rel="noopener noreferred"><social-media-icons color="#548DA6" icon="facebook" size="32" title="Facebook profile"></social-media-icons></a>
+				<a href="https://github.com/Heliex/" target="_blank" rel="noopener noreferrer"><social-media-icons color="darkgreys" icon="github" title="Heliex Github Profile" size="32"></social-media-icons></a>
 			</div>
           </app-toolbar>
         </app-header>
