--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -105,10 +105,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div title>Christophe Gerard   
-				<a href="https://facebook.com/christophe.gerard.96" target="_blank" rel="noopener noreferred"><social-media-icons color="#548DA6" icon="facebook" size="32" title="Facebook profile"></social-media-icons></a>
-				<a href="https://github.com/Heliex/" target="_blank" rel="noopener noreferrer"><social-media-icons color="darkgreys" icon="github" title="Heliex Github Profile" size="32"></social-media-icons></a>
-			</div>
+            <div title>Christophe Gerard</div>
           </app-toolbar>
         </app-header>
 
@@ -119,7 +116,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <my-skills name="skills" route="{{route}}"></my-skills>
 		  <my-projects name="projects" route="{{route}}"></my-projects>
         </iron-pages>
-		<footer> &copy; Christophe GERARD</footer>
+		<footer> &copy; Christophe GERARD - 
+			<a href="https://github.com/Heliex/" target="_blank" rel="noopener noreferrer"><social-media-icons color="#548DA6" icon="github" title="Heliex Github Profile" size="32"></social-media-icons></a>
+			<a href="https://plus.google.com/u/0/115001132326251821958" target="_blank" rel="noopener noreferrer"><social-media-icons color="#548DA6" icon="googleplus" title="Heliex GooglePlus Profile" size ="32"></social-media-icons></a>
+		</footer>
       </app-header-layout>
 
     </app-drawer-layout>
