--- a/front/src/my-app.html
+++ b/front/src/my-app.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
-<link rel="import" href="../bower_components/social-iconset/social-iconset.html">
+<link rel="import" href="../bower_components/social-media-icons/social-media-icons.html">
 <link rel="import" href="my-icons.html">
 
 <dom-module id="my-app">
@@ -105,17 +105,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div title>Christophe Gerard</div>
-			<div class="x3size">
-				<iron-icon class="size72 colorize" icon="social-iconset:twitter"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:github"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:facebook"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:instagram"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:linkedin"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:youtube"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:rss"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:vimeo"></iron-icon>
-				<iron-icon class="size72 colorize" icon="social-iconset:googleplus"></iron-icon>
+            <div title>Christophe Gerard
+			</div>
+			<div>
+				<a href="https://github.com/Heliex/" target="_blank" ><social-media-icons icon="github" color="darkgrey" size="72"></social-media-icons></a>
 			</div>
           </app-toolbar>
         </app-header>
